--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ requests==2.28.1
 beautifulsoup4==4.11.1
 moviepy==1.0.3
 gunicorn==20.1.0
-groq==0.18.0  # Use the latest version available
+groq==0.18.0
+Werkzeug==2.0.3  # Specify a compatible version
