--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Flask==2.2.2
-requests==2.28.1
-beautifulsoup4==4.11.1
-moviepy==1.0.3
-gunicorn==20.1.0
-groq==0.18.0
-Werkzeug==2.0.3  # Specify a compatible version
+Flask
+requests
+beautifulsoup4
+moviepy
+gunicorn
+groq
